--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: lmhoang45@gmail.com
   facebook:
   flickr:
-  github: https://github.com/lmhoang45
+  github: lmhoang45
   instagram:
   linkedin:
   pinterest:
