--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ name:
 description: Just another Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/lmhoang45/lmhoang45.github.com/tree/master/images/eiffel.png
-
-#
+#avatar: https://github.com/lmhoang45/lmhoang45.github.com/tree/master/images/eiffel.png
+#https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/lmhoang45/lmhoang45.github.com/master/images/eiffel.png
 # Flags below are optional
 #
 
