--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hoang's notes
+name: Hoàng's notes
 
 # Short bio or description (displayed in the header)
-description: Just another Blog
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://github.com/lmhoang45/lmhoang45.github.com/tree/master/images/eiffel.png
