--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: lmhoang45
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/ly-minh-hoang/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
