--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Hoàng's notes
 
 # Short bio or description (displayed in the header)
-description: ---------------               
+description: ----------------               
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://github.com/lmhoang45/lmhoang45.github.com/tree/master/images/eiffel.png
@@ -58,6 +58,11 @@ permalink: /:title/
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
+markdown: kramdown
+#permalink: pretty
+#future: true
+#highlighter: rouge
+#linenos: true
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
