--- a/_config.yml
+++ b/_config.yml
@@ -59,18 +59,24 @@ version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
 markdown: kramdown
-#permalink: pretty
-#future: true
-#highlighter: rouge
-#linenos: true
+permalink: pretty
+future: true
+highlighter: rouge
+linenos: true
 kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+  auto_ids: true
   syntax_highlighter: rouge
-  syntax_highlighter_opts:
+  
+#markdown
+#kramdown:
+  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+#  input: GFM
+  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+#  syntax_highlighter: rouge
+#  syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+#    css_class: 'highlight'
 
 # Set the Sass partials directory, as we're using @imports
 sass:
